@@ -1,5 +1,10 @@
 2007-10-21 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/gimv_dir_view.[ch]: GObjectize.
+	* src/gimv_thumb_win.[ch]: Follow the change.
+
+2007-10-21 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/fr-archive.[ch]: Remove fr_archive_ref() and fr_archive_unref().
 	* src/gimv_image_info.c, src/gimv_thumb_view.c: Follow the change.
 
